--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.plants</groupId>
 	<artifactId>Plant_Ropan</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>Plant_Ropan</name>
 	<description>Plantn Ropan</description>
 	<url />
